--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -40,7 +40,7 @@ jobs:
     - name: 📦 Build the Executable using PyInstaller
       # The PROPRIETARY_SECRET_KEY is passed here and read by video_tool.py during packaging.
       run: |
-        pyinstaller --onefile --windowed video_tool.py
+        pyinstaller --onedir --windowed video_tool.py
       env:
         PROPRIETARY_SECRET_KEY: ${{ env.PROPRIETARY_SECRET_KEY }}
       
