--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -1,1 +1,55 @@
+name: Build Proprietary Video Tool EXE (Automated Key)
 
+on:
+  push:
+    branches: [ main ] 
+  pull_request:
+    branches: [ main ]
+
+jobs:
+  build_windows_exe:
+    runs-on: windows-latest 
+
+    steps:
+    - name: ⬇️ Checkout code
+      uses: actions/checkout@v4
+
+    - name: 🐍 Set up Python and Dependencies
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+        
+    - name: ⚙️ Install dependencies (PyInstaller, Cryptography)
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller cryptography
+
+    - name: 🔑 Generate and Export Secret Key
+      id: generate_key
+      run: |
+        # IMPORTANT FIX: Use end='' in Python print to suppress the newline, 
+        # preventing the key length from becoming 48.
+        $key_output = $(python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode(), end='')")
+        
+        # Export the clean, 44-character key
+        echo "PROPRIETARY_SECRET_KEY=$key_output" | Out-File -FilePath $env:GITHUB_ENV -Append
+      shell: powershell 
+
+    - name: 📦 Build the Executable using PyInstaller
+      # Running with --onedir as suggested by the last successful build log
+      run: |
+        pyinstaller --onedir --windowed video_tool.py
+      env:
+        PROPRIETARY_SECRET_KEY: ${{ env.PROPRIETARY_SECRET_KEY }}
+      
+    - name: Log Key FOR TESTING ONLY
+      run: |
+        echo "The automatically generated key for this build is: ${{ env.PROPRIETARY_SECRET_KEY }}"
+      shell: bash
+
+    - name: 📤 Upload Executable artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: proprietary-video-tool-exe
+        # Uploads the entire output folder (needed for --onedir build)
+        path: dist/video_tool/
